Incrementando o codigo HTML.

--- a/index.html
+++ b/index.html
@@ -12,5 +12,12 @@
 </head>
 <body>
 <h1>Olá Mundo!</h1>
+<h1>Salve Gordao Karai</h1>
+<h2>indo pro remoto!</h2>
+<button onclick="firstcommit()">Click-ME</button>
+<script>
+function firstcommit(){
+alert("hello world!");
+}
 </body>
 </html>
